--- a/templates/blog/tags/sidebar.html
+++ b/templates/blog/tags/sidebar.html
@@ -104,16 +104,16 @@
             </div>
         </aside>
     {% endif %}
-    <aside id="text-2" class="widget widget_text"><h3 class="widget-title">欢迎您star或者fork本站源代码</h3>
-        <!--<div class="textwidget">-->
+    <!--<aside id="text-2" class="widget widget_text"><h3 class="widget-title">欢迎您star或者fork本站源代码</h3>-->
+        <!--&lt;!&ndash;<div class="textwidget">&ndash;&gt;-->
 
-            <!--<p><a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img-->
-                    <!--src="https://resource.lylinux.net/img.shields.io/github/stars/liangliangyy/djangoblog.svg?style=social&amp;label=Star"-->
-                    <!--alt="GitHub stars"></a> <a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img-->
-                    <!--src="https://resource.lylinux.net/img.shields.io/github/forks/liangliangyy/djangoblog.svg?style=social&amp;label=Fork"-->
-                    <!--alt="GitHub forks"></a></p>-->
-        <!--</div>-->
-    </aside>
+            <!--&lt;!&ndash;<p><a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img&ndash;&gt;-->
+                    <!--&lt;!&ndash;src="https://resource.lylinux.net/img.shields.io/github/stars/liangliangyy/djangoblog.svg?style=social&amp;label=Star"&ndash;&gt;-->
+                    <!--&lt;!&ndash;alt="GitHub stars"></a> <a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img&ndash;&gt;-->
+                    <!--&lt;!&ndash;src="https://resource.lylinux.net/img.shields.io/github/forks/liangliangyy/djangoblog.svg?style=social&amp;label=Fork"&ndash;&gt;-->
+                    <!--&lt;!&ndash;alt="GitHub forks"></a></p>&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+    <!--</aside>-->
     <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">功能</h3>
         <ul>
             <li><a href="{{ SITE_BASE_URL }}/admin/" rel="nofollow">管理站点</a></li>
