--- a/templates/share_layout/footer.html
+++ b/templates/share_layout/footer.html
@@ -12,7 +12,7 @@
             RSS Feed
         </a>
         |&nbsp; Hosting On&nbsp;
-        <a href="https://www.linode.com/?r=b0d38794d05ef8816b357a929106e89b7c6452f9" target="blank" rel="nofollow">Linode</a>
+        <a href="https://www.hostwinds.com/" target="blank" rel="nofollow">Linode</a>
         |&nbsp;
         <a href="https://tongji.baidu.com/sc-web/3478620/home/ico?siteId=11261596" target="_blank"
            rel="nofollow">百度统计</a>
