--- a/templates/blog/tags/sidebar.html
+++ b/templates/blog/tags/sidebar.html
@@ -125,10 +125,10 @@
                 <li><a href="{% url "account:login" %}" rel="nofollow">登录</a>
             {% endif %}
             {% if user.is_superuser %}
-                <!--<li><a href="{% url "blog:refresh" %}" target="_blank">刷新缓存</a></li>-->
+                <li><a href="{% url "blog:refresh" %}" target="_blank">刷新缓存</a></li>
                 <li><a href="{% url 'owntracks:show_dates' %}" target="_blank">运动轨迹记录</a></li>
             {% endif %}
-            <!--<li><a href="http://gitbook.lylinux.net" target="_blank" rel="nofollow">GitBook</a></li>-->
+            <li><a href="http://www.lijifeng.club:4000/" target="_blank" rel="nofollow">GitBook</a></li>
         </ul>
     </aside>
     <div id="rocket" class="show" title="点我返回顶部"></div>
